--- a/templates/post.html
+++ b/templates/post.html
@@ -3,9 +3,16 @@
 {% block title %}{{ issue.title }}{% endblock %}
 
 {% block content %}
+<div class="content" id="mobile-panel">
     <article class="post">
-        <h1 class="post__title">{{ issue.title }}</h1>
-        <div class="post__meta">{{ issue.created_at.strftime('%Y-%m-%d') }}</div>
+        <header class="post__header">
+            <h1 class="post__title">{{ issue.title }}</h1>
+            <div class="post__meta">
+                <span class="post__time">{{
+                    issue.created_at.strftime('%Y-%m-%d') }}</span>
+            </div>
+        </header>
         <div class="post__content">{{ html_body|safe }}</div>
     </article>
+</div>
 {% endblock %}
