--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,25 @@
 <!doctype html>
 <html lang="zh-CN">
     <head>
-        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>{% block title %}Geoqiao{% endblock %}</title>
         <link
+            rel="alternate"
+            type="application/atom+xml"
+            title="RSS"
+            href="https://geoqiao.github.io/contents/atom.xml" />
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
+        <link
             rel="stylesheet"
-            href="https://geoqiao.github.io/templates/static/css/style.css"
-        />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
+            href="https://geoqiao.github.io/templates/static/css/style.css" />
+        <link
+            rel="stylesheet"
+            href="https://geoqiao.github.io/templates/static/css/pygments.css" />
+        <link rel="icon" type="image/png"
+            href="https://geoqiao.github.io/favicon.png">
     </head>
     <body>
         <div class="container">
@@ -25,8 +36,7 @@
 
             <nav
                 id="mobile-menu"
-                class="mobile-menu slideout-menu slideout-menu-left"
-            >
+                class="mobile-menu slideout-menu slideout-menu-left">
                 <ul class="mobile-menu-list">
                     <li class="mobile-menu-item">
                         <a href="/"> Home </a>
@@ -51,7 +61,6 @@
         </div>
         <script
             type="text/javascript"
-            src="https://geoqiao.github.io/templates/static/js/even.js"
-        ></script>
+            src="https://geoqiao.github.io/templates/static/js/even.js"></script>
     </body>
 </html>
