--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,7 @@
             <main>{% block content %}{% endblock %}</main>
             {% include 'includes/footer.html' %}
         </div>
+        {% block script %}{% endblock %}
         <script
             type="text/javascript"
             src="https://geoqiao.github.io/templates/static/js/even.js"></script>
