--- a/templates/post.html
+++ b/templates/post.html
@@ -16,3 +16,13 @@
     </article>
 </div>
 {% endblock %}
+
+{% block script %}
+<script src="https://utteranc.es/client.js"
+    repo="geoqiao/geoqiao.github.io"
+    issue-number="{{ issue.number }}"
+    theme="preferred-color-scheme"
+    crossorigin="anonymous"
+    async>
+</script>
+{% endblock %}
