--- a/templates/base.html
+++ b/templates/base.html
@@ -1,73 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-CN">
-    <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>{% block title %}Geoqiao{% endblock %}</title>
-        <link
-            rel="alternate"
-            type="application/atom+xml"
-            title="RSS"
-            href="https://geoqiao.github.io/contents/atom.xml" />
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
-        <link
-            rel="stylesheet"
-            href="https://geoqiao.github.io/templates/static/css/style.css" />
-        <link
-            rel="stylesheet"
-            href="https://geoqiao.github.io/templates/static/css/pygments.css" />
-        <link rel="stylesheet" type="text/css"
-            href="https://geoqiao.github.io/templates/static/css/github.css" /></head>
-    <link rel="icon" type="image/png"
-        href="https://geoqiao.github.io/favicon.png">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Geoqiao的博客{% endblock %}</title>
+    <link rel="stylesheet" href="https://geoqiao.github.io/templates/static/css/style.css">
+    <link rel="stylesheet" href="https://geoqiao.github.io/templates/static/css/prism.css">
+    <link rel="alternate" type="application/atom+xml" title="RSS" href="/contents/atom.xml">
+    <link rel="icon" type="image/png" href="https://geoqiao.github.io/templates/static/images/favicon.png">
 </head>
+
 <body>
-    <div class="container">
-        <div id="mobile-navbar" class="mobile-navbar">
-            <div class="mobile-header-logo">
-                <a href="/" class="logo">Geoqiao</a>
-            </div>
-            <div class="mobile-navbar-icon icon-out">
+    <header>
+        <nav class="container">
+            <a href="/" class="logo">Geoqiao的博客</a>
+            <button class="menu-toggle" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
                 <span></span>
-            </div>
-        </div>
-
-        <nav
-            id="mobile-menu"
-            class="mobile-menu slideout-menu slideout-menu-left">
-            <ul class="mobile-menu-list">
-                <li class="mobile-menu-item">
-                    <a href="/"> Home </a>
-                </li>
-
-                <li class="mobile-menu-item">
-                    <a href="/tags"> Tags </a>
-                </li>
-
-                <li class="mobile-menu-item">
-                    <a href="/about"> About </a>
-                </li>
-
-                <li class="mobile-menu-item">
-                    <a href="/contents/atom.xml"> RSS </a>
-                </li>
+            </button>
+            <ul class="nav-links">
+                <li><a href="/contents/">首页</a></li>
+                <li><a href="/contents/tags">标签</a></li>
+                <li><a href="/contents/about">关于</a></li>
+                <li><a href="/contents/atom.xml">RSS</a></li>
             </ul>
         </nav>
-        {% include 'includes/header.html' %}
-        <main>{% block content %}{% endblock %}</main>
-        {% include 'includes/footer.html' %}
-    </div>
-    {% block script %}{% endblock %}
-    <script
-        type="text/javascript"
-        src="https://geoqiao.github.io/templates/static/js/even.js"></script>
-    <script type="text/javascript"
-        src="https://geoqiao.github.io/templates/static/js/prettify.js"></script>
-    <script
-        type="text/javascript">window.onload = function () {var pre = document.getElementsByTagName('pre');for(i=0,l=pre.length;i<l;i++) pre[i].className += " prettyprint linenums";prettyPrint();}</script>
-    </body>
+    </header>
+
+    <main class="container">
+        {% block content %}{% endblock %}
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Geoqiao的博客</p>
+        </div>
+    </footer>
+
+    <script src="https://geoqiao.github.io/templates/static/js/prism.js"></script>
+    <script src="https://geoqiao.github.io/templates/static/js/main.js"></script>
+</body>
+
 </html>
