--- a/templates/post.html
+++ b/templates/post.html
@@ -1,36 +1,27 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ issue.title }}{% endblock %}
+{% block title %}{{ issue.title }} - Geoqiao的博客{% endblock %}
 
 {% block content %}
-<div class="content" id="mobile-panel">
-    <article class="post">
-        <header class="post__header">
-            <h1 class="post__title">{{ issue.title }}</h1>
-            <div class="post__meta">
-                <span class="post__time">{{
-                    issue.created_at.strftime('%Y-%m-%d') }}</span>
-            </div>
-        </header>
-        <div class="post__content">{{ html_body|safe }}</div>
-    </article>
+<article class="post full-post">
+    <h1 class="post-title">{{ issue.title }}</h1>
+    <div class="post-meta">
+        发布于 {{ issue.created_at.strftime('%Y-%m-%d') }}
+        {% if issue.labels %}
+        | 标签:
+        {% for label in issue.labels %}
+        <a href="/tag/{{ label.name }}.html" class="tag">{{ label.name }}</a>
+        {% endfor %}
+        {% endif %}
+    </div>
+    <div class="post-content">
+        {{ html_body|safe }}
+    </div>
+</article>
+
+<div id="comments">
+    <script src="https://utteranc.es/client.js" repo="geoqiao/geoqiao.github.io" issue-term="pathname"
+        theme="github-light" crossorigin="anonymous" async>
+        </script>
 </div>
-
-<div class="comments" id="comments"><div id="utterances-container"></div>
-{% endblock %}
-
-{% block script %}
-    <script>
-    var container = document.getElementById('utterances-container')
-    var script = document.createElement('script')
-    script.src = 'https://utteranc.es/client.js'
-    script.setAttribute('repo', 'geoqiao/geoqiao.github.io')
-    script.setAttribute('issue-number', '{{ issue.number }}')
-    script.setAttribute('theme', 'github-light')
-    script.setAttribute('label', 'utterances')
-    script.crossorigin = 'anonymous'
-    script.async = true
-
-    container.appendChild(script)
-    </script>
 {% endblock %}
