--- a/templates/post.html
+++ b/templates/post.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ issue.title }} - Geoqiao的博客{% endblock %}
+{% block title %}{{ issue.title }} - {{ blog_title }}{% endblock %}
 
 {% block content %}
 <article class="post full-post">
@@ -20,8 +20,8 @@
 </article>
 
 <div id="comments">
-    <script src="https://utteranc.es/client.js" repo="geoqiao/geoqiao.github.io" issue-term="pathname"
-        theme="github-light" crossorigin="anonymous" async>
+    <script src="https://utteranc.es/client.js" repo="{{ github_name }}/{{ github_name }}.github.io"
+        issue-term="pathname" theme="github-light" crossorigin="anonymous" async>
         </script>
 </div>
 {% endblock %}
