--- a/templates/default_theme/base.html
+++ b/templates/default_theme/base.html
@@ -7,10 +7,11 @@
     <meta name="google-site-verification" content="{{ google_search_verification }}" />
     <title>{% block title %}{{ blog_title }}{% endblock %}</title>
     <meta name="description" content="{{ meta_description }}">
-    <link rel="stylesheet" href="https://{{ github_name }}.github.io/templates/static/css/style.css">
-    <link rel="stylesheet" href="https://{{ github_name }}.github.io/templates/static/css/prism.css">
+    <link rel="stylesheet" href="https://{{ github_name }}.github.io/templates/default_theme/static/css/style.css">
+    <link rel="stylesheet" href="https://{{ github_name }}.github.io/templates/default_theme/static/css/prism.css">
     <link rel="alternate" type="application/atom+xml" title="RSS" href="/contents/atom.xml">
-    <link rel="icon" type="image/png" href="https://{{ github_name }}.github.io/templates/static/images/favicon.png">
+    <link rel="icon" type="image/png"
+        href="https://{{ github_name }}.github.io/templates/default_theme/static/images/favicon.png">
 </head>
 
 <body>
